--- a/src/index.html
+++ b/src/index.html
@@ -63,14 +63,8 @@ c9.24,0,15.36-6.5,15.36-15.64c0-1.17-0.11-2.29-0.31-3.36C31.05,21,16,21,16,21z" 
     <button class="button" data-background="cornflowerblue">
       cornflowerblue
     </button>
-    <button class="button" data-clean="true">
+    <button class="button" data-background="clean" data-animate="clean">
       clean
-    </button>
-    <button class="button" data-reset="true">
-      reset
-    </button>
-    <button class="button" data-animate="true">
-      animate (seven)
     </button>
   </div>
 </body>
