--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@ c9.24,0,15.36-6.5,15.36-15.64c0-1.17-0.11-2.29-0.31-3.36C31.05,21,16,21,16,21z" 
     <button class="button" data-background="cornflowerblue">
       cornflowerblue
     </button>
-    <button class="button" data-background="clean" data-animate="clean">
+    <button class="button" data-background="white" data-animate="clean">
       clean
     </button>
   </div>
